--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "mocha",
+    "dev": "nodemon index.js",
+    "swagger-autogen": "node ./swagger.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,20 @@
   "bugs": {
     "url": "https://github.com/parisote/backend-snapcode/issues"
   },
-  "homepage": "https://github.com/parisote/backend-snapcode#readme"
+  "homepage": "https://github.com/parisote/backend-snapcode#readme",
+  "dependencies": {
+    "chai": "^4.3.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "prisma": "^4.3.1",
+    "swagger-ui-express": "^4.5.0"
+  },
+  "devDependencies": {
+    "axios": "^0.27.2",
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.20",
+    "swagger-autogen": "^2.22.0"
+  }
 }
