--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -21,5 +21,5 @@ jobs:
         cache: 'npm'
     - name: Install dependencies
       run: npm ci
-    - run: npm run dev --if-present
+    - run: npm run build --if-present
     - run: npm test
