--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ develop ]
   pull_request:
-    types: [review_requested]
+    types: [ready_for_review,review_requested]
     branches: [ develop, release/** ]
 
 jobs:
