--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,18 @@
-version: '3.1'
+version: '3.7'
 
 services:
-
   db:
     image: postgres
     restart: always
     environment:
-      POSTGRES_PASSWORD: test1235
-      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: "${DB_PASSWORD}"
+      POSTGRES_USER: root
+    logging:
+      options:
+        max-size: 10m
+        max-file: "3"
     ports:
-      - "2022:5432"
+      - "5432:5432"
+    volumes:
+      - ./db-data/:/var/lib/postgresql/data/
+      - ./sql/snapcode.sql:/docker-entrypoint-initdb.d/snapcode.sql
