--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "homepage": "https://github.com/parisote/backend-snapcode#readme",
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "argon2": "^0.29.1",
     "chai": "^4.3.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^4.3.1",
     "swagger-ui-express": "^4.5.0"
