--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^4.3.1",
+    "supertest": "^6.2.4",
     "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "axios": "^0.27.2",
     "jest": "^29.0.3",
+    "jest-mock-extended": "^3.0.1",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.20",
     "swagger-autogen": "^2.22.0"
