--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
   "dependencies": {
     "@prisma/client": "^4.3.1",
     "argon2": "^0.29.1",
+    "aws-sdk": "^2.1231.0",
     "chai": "^4.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^4.3.1",
+    "sharp": "^0.31.1",
     "supertest": "^6.2.4",
     "swagger-ui-express": "^4.5.0"
   },
