--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -11,6 +11,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Use Docker
+    - uses: isbang/compose-action@v1.3.2
+      with:
+        compose-file: "../docker-compose.yml"
+      env:
+        DB_PASSWORD: "test"
+
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
@@ -20,3 +27,4 @@ jobs:
       run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - run: npm docker:down
