--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -12,11 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Use Docker
-    - uses: isbang/compose-action@v1.3.2
-      with:
-        compose-file: "../docker-compose.yml"
-      env:
-        DB_PASSWORD: "test"
+        run: docker-compose up -d
 
     - name: Use Node.js
       uses: actions/setup-node@v3
