--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -16,6 +16,10 @@ jobs:
       with:
         node-version: '18.x'
         cache: 'npm'
+    - name: Setup variables
+      env: 
+        DATABASE_URL: postgresql://root:test@localhost:5432/snapcode
+        DB_PASSWORD: test
     - name: Install dependencies
       run: npm ci
     - run: npm run build --if-present
