--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "swagger-autogen": "node ./swagger.js",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "test:locate": "yarn docker:up && yarn prisma migrate deploy && jest -i",
+    "test:local": "yarn docker:up && yarn prisma migrate deploy && jest -i && yarn docker:down",
     "test": "yarn prisma migrate deploy && jest -i"
   },
   "repository": {
