--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "yarn docker:up && yarn prisma migrate deploy && jest --coverage && yarn docker:down",
     "dev": "nodemon index.js",
     "swagger-autogen": "node ./swagger.js",
     "docker:up": "docker-compose up -d",
