--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "docker:down": "docker-compose down",
     "test:local": "yarn docker:up && yarn prisma migrate deploy && jest -i && yarn docker:down",
     "test": "yarn prisma migrate deploy && jest -i"
-
   },
   "repository": {
     "type": "git",
@@ -29,11 +28,14 @@
     "@prisma/client": "^4.3.1",
     "argon2": "^0.29.1",
     "aws-sdk": "^2.1231.0",
+    "chalk": "4.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "loglevel": "^1.8.0",
+    "loglevel-plugin-prefix": "^0.8.4",
     "multer": "^1.4.5-lts.1",
     "prisma": "^4.3.1",
     "sharp": "^0.31.1",
