--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test:coverage": "yarn docker:up && yarn prisma migrate deploy && jest --coverage && yarn docker:down",
-    "dev": "nodemon index.js",
+    "dev": "nodemon index.js --trace-warnings",
     "swagger-autogen": "node ./swagger.js",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-jwt": "^7.7.5",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "loglevel": "^1.8.0",
