--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -11,6 +11,7 @@ jobs:
     env: 
       DATABASE_URL: postgresql://root:test@localhost:5432/snapcode
       DB_PASSWORD: test
+      JWT_SECRET: secret
 
     steps:
     - uses: actions/checkout@v3
