--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       POSTGRES_PASSWORD: "${DB_PASSWORD}"
       POSTGRES_USER: root
+      KEYS: cosa1,cosa2,cosa3,cosa1,cosa2,cosa3
     logging:
       options:
         max-size: 10m
